--- a/authenticate-me/frontend/public/index.html
+++ b/authenticate-me/frontend/public/index.html
@@ -7,7 +7,7 @@
   <meta name="theme-color" content="#000000" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <script src="https://kit.fontawesome.com/008ff48133.js" crossorigin="anonymous"></script>
-  <title>React Template</title>
+  <title>Cleverse</title>
 </head>
 
 <body>
