--- a/authenticate-me/frontend/public/index.html
+++ b/authenticate-me/frontend/public/index.html
@@ -13,7 +13,7 @@
     name="image"
     property="og:image"
     content="https://live.staticflickr.com/65535/51145297463_df5ca2a2a5_b.jpg"/>
-  <meta name="description" property="og:description" content="Cleverse" />
+  <meta name="description" property="og:description" content="Cleverse App" />
   <meta name="author" content="jamie Kichuk" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <script src="https://kit.fontawesome.com/008ff48133.js" crossorigin="anonymous"></script>
