--- a/authenticate-me/frontend/public/index.html
+++ b/authenticate-me/frontend/public/index.html
@@ -5,6 +5,16 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
+  <meta name="description" content="Cleverse app" />
+  <meta name="title" property="og:title" content="Cleverse" />
+  <meta property="og:type" content="Website" />
+  <!-- update the image of the site -->
+  <meta
+    name="image"
+    property="og:image"
+    content="https://live.staticflickr.com/65535/51145297463_df5ca2a2a5_b.jpg"/>
+  <meta name="description" property="og:description" content="Cleverse App" />
+  <meta name="author" content="jamie Kichuk" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <script src="https://kit.fontawesome.com/008ff48133.js" crossorigin="anonymous"></script>
   <title>Cleverse</title>
